# 20240328
- Added Database definition
- Updated `README.md`.

# 20240401
- Added Permission Addition & Deletion Logics
- Updated the database to ORM

# 20240407
- Added Command Permission Checks
- Create the Global Admin checking command
- Dispose Database connection upon extension unload (Clenaup)

# 20240411
- Added GlobalAdmin UserSelect component callback
- Fix database initialise system
- Added GlobalAdmin RoleSelect component callback
- Added channel moderator setting command
- Component callback placeholders
- Added a summary command in `README.md`

# 20240418
- Send all setting components as ephemeral messages
- Added Component callbacks
- Added library code modification warning
- Add Context Menu details in `README.md`

# 20240429
- Global Admin Removal draft (Need to test)
- Update `README.md` for removal commands

# 20240508
- Add placeholder for the instances to be implemented
- Tested global admin removal function
- Fix the channel mod and global admin setting ephemeral message deletion bug

# 20240509
- Channel Moderator Removal draft (Need to test)
- Fix channel moderaetor setting function
- Silent the mentions in the failed removal
- Fix channel send message in the component callback
- Fix channel mod adding initial value
- Fix channel mod adding placeholder text